--- a/index.html
+++ b/index.html
@@ -39,87 +39,109 @@
 <div id="header" class="parallax">
 	<div class="header-text">
 		<h1 class="no-bot-margin" style="color: white"><strong>KEVIN LIM</strong></h1>
+		<p style="color: white; margin-bottom: 0.5rem"><em>student, developer and engineer</em></p>
 		<p style="color: white"><a href="#me">About Me</a> / <a href="#projects">Projects</a> / <a href="#contact">Contact Me</a></p>
 	</div>
 </div>
+	
 <div class="page-body">
-	<div class="container">
-		<div class="section">
-			
-			<!-- About Me -->
-			<div id="me">
-				<div class="row">
-					<h2>Hi, I'm Kevin</h2>
-				</div>
-				<div class="row">
-					<div class="seven columns">
-						<p>I am currently studying Computer Engineering at University of California, San Diego.</p>
-						<p>I am extremely interested in network engineering/systems administration and looking to expand my skillset into different fields of software engineering.</p>
-						<p>When I am not programming, I enjoy reading, gaming and hiking.</p>
-					</div>
-					<div class="five columns">
-						<h6 class="about-desc">STUDIED AT</h6>
-						<p style="text-align: right">University of California, San Diego</p>
-						<h6 class="about-desc">DEGREE IN</h6>
-						<p style="text-align: right">Computer Engineering, B.S.</p>
-						<h6 class="about-desc">EXPERIENCE IN</h6>
-						<p style="text-align: right">Java, C, C++, Python<br>HTML, CSS, JavaScript<br>Ruby on Rails, Node.js<br>Active Directory, Microsoft Exchange</p>
-					</div>
-				</div>
+<div class="container">
+<div class="section">
+
+	<!-- About Me -->
+	<div id="me">
+		<div class="row">
+			<h2>Hi, I'm Kevin</h2>
+		</div>
+		<div class="row">
+			<div class="seven columns">
+				<p>I currently studying Computer Engineering at University of California, San Diego.</p>
+				<p>I am currently developing honing my skillset in <strong>network engineering</strong> and <strong>systems administration</strong>, while expanding my skillset into different fields of <strong>software engineering</strong>.</p>
+				<p>When I am not programming, I enjoy reading, gaming, building computers and hiking.</p>
 			</div>
-			
-			<hr>
-			
-			<!-- Projects -->
-			<div id="projects">
-				<div class="row">
-					<h2>My Projects</h2>
-				</div>
-				<div class="row">
-					<div class="project-card">
-						<div class="project-container">
-							<img class="u-max-full-width" src="images/test.jpg">
-							<h5 class="no-bot-margin">squadFeeder | <a href="https://github.com/knlim95/squadFeeder"><i class="icon-code"></i></a></h5>
-							<p class="no-bot-margin">A web application that allows a group to get together and decide where the group should eat by calculating everyone's preferences and locations and aggregating results based on votes.</p>
-							<hr style="margin-bottom: 1rem; margin-top: 1rem">
-							<div class="project-tagbox">
-								<div class="project-tag">HTML5</div>
-                                <div class="project-tag">CSS3</div>
-                                <div class="project-tag">JavaScript</div>
-                                <div class="project-tag">jQuery</div>
-                                <div class="project-tag">Bootstrap</div>
-                                <div class="project-tag">Node.js + Express</div>
-                                <div class="project-tag">Socket.IO</div>
-                                <div class="project-tag">Yelp Fusion</div>
-                                <div class="project-tag">Handlebars</div>
-							</div>
-						</div>
-					</div>
-				</div>
+			<div class="five columns">
+				<h6 class="about-desc">STUDIED AT</h6>
+				<p style="text-align: right">University of California, San Diego</p>
+				<h6 class="about-desc">DEGREE IN</h6>
+				<p style="text-align: right">Computer Engineering, B.S.</p>
+				<h6 class="about-desc">EXPERIENCE IN</h6>
+				<p style="text-align: right">Java, C, C++, Python<br>HTML, CSS, JavaScript<br>Ruby on Rails, Node.js<br>Active Directory, Microsoft Exchange</p>
 			</div>
-			
-			<hr>
-			
-			<!-- Contact Me -->
-			<div id="contact">
-				<div class="row">
-					<h2>Need to Contact Me?</h2>
-				</div>
-				<div class="row">
-					<div class="seven columns">
-						<h6 class="no-bot-margin">Send Me an Email At</h6>
-						<p><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></p>
-					</div>
-					<div class="five columns">
-						<h6 class="no-bot-margin">I'm Also Available At</h6>
-						<p class="no-bot-margin"><a href="https://www.linkedin.com/in/kevin-lim-93a055122" target="_blank"><i class="icon-linkedin-squared"></i>LinkedIn</a></p>
-                        <p class="no-bot-margin"><a href="https://github.com/knlim95" target="_blank"><i class="icon-github-circled"></i>GitHub</a></p>
-					</div>
-				</div>
-			</div>
-			
+		</div>
+		<div class="row">
+			<h4>Experience</h4>
+			<h6 class="no-bot-margin"><strong>Alpha Phi Omega - Rho Pi Chapter</strong></h6>
+			<p class="no-bot-margin">Webmaster</p>
+			<p class="no-bot-margin"><em>May 2017 - Present</em></p>
+			<br>
+			<h6 class="no-bot-margin"><strong>University of California, San Diego - Enrollment Management Helpdesk</strong></h6>
+			<p class="no-bot-margin">Desktop Support Technician</p>
+			<p class="no-bot-margin"><em>June 2015 - Present</em></p>
 		</div>
 	</div>
+	<hr>
+	<!-- Projects -->
+	<div id="projects">
+		<div class="row">
+			<h2>My Projects</h2>
+		</div>
+		<div class="row">
+			<div class="project-card">
+				<div class="project-container">
+	<!--					<img class="u-max-full-width" src="images/test.jpg">-->
+					<h5 class="no-bot-margin"><strong>TritonBudget</strong> |<a href="https://github.com/knlim95/TritonBudget"><i class="icon-code"></i></a></h5>
+					<p class="no-bot-margin">An Android application designed for UCSD students to accurately budget their Dining Dollars and provides nutritional information for all the dining halls, so students can make informed decisions on food.</p>
+					<hr style="margin-bottom: 1rem; margin-top: 1rem">
+					<div class="project-tagbox">
+						<div class="project-tag">Java</div>
+						<div class="project-tag">Android Studio</div>
+						<div class="project-tag">SQLite</div>
+						<div class="project-tag">Agile Development</div>
+					</div>
+				</div>
+			</div>
+			<div class="project-card" style="margin-bottom: 1rem">
+				<div class="project-container">
+	<!--					<img class="u-max-full-width" src="images/test.jpg">-->
+					<h5 class="no-bot-margin"><strong>squadFeeder</strong> |<a href="https://github.com/knlim95/squadFeeder"><i class="icon-code"></i></a></h5>
+					<p class="no-bot-margin">A web application that allows a group to get together and decide where the group should eat by calculating everyone's preferences and locations and aggregating results based on votes.</p>
+					<hr style="margin-bottom: 1rem; margin-top: 1rem">
+					<div class="project-tagbox">
+						<div class="project-tag">HTML5</div>
+						<div class="project-tag">CSS3</div>
+						<div class="project-tag">JavaScript</div>
+						<div class="project-tag">jQuery</div>
+						<div class="project-tag">Bootstrap</div>
+						<div class="project-tag">Node.js + Express</div>
+						<div class="project-tag">Socket.IO</div>
+						<div class="project-tag">Yelp Fusion</div>
+						<div class="project-tag">Handlebars</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr>
+	<!-- Contact Me -->
+	<div id="contact">
+		<div class="row">
+			<h2>Need to Contact Me?</h2>
+		</div>
+		<div class="row">
+			<div class="seven columns">
+				<h6 class="no-bot-margin">Send Me an Email At</h6>
+				<p><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></p>
+			</div>
+			<div class="five columns">
+				<h6 class="no-bot-margin">I'm Also Available At</h6>
+				<p class="no-bot-margin"><a href="https://www.linkedin.com/in/kevin-lim-93a055122" target="_blank"><i class="icon-linkedin-squared"></i>LinkedIn</a></p>
+				<p class="no-bot-margin"><a href="https://github.com/knlim95" target="_blank"><i class="icon-github-circled"></i>GitHub</a></p>
+			</div>
+		</div>
+	</div>
+
+</div>
+</div>
 </div>
 	
 <!-- Footer -->
