Added squadFeeder direct link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 		<div class="row">
 			<div class="seven columns">
-				<p>I am a current Computer Engineering student at University of California, San Diego.</p>
+				<p>I am currently studying Computer Engineering at the University of California, San Diego.</p>
 				<p>I am currently developing my skillset towards <strong>network engineering</strong> and <strong>systems administration</strong>, while expanding my skillset into different fields of <strong>software engineering</strong>.</p>
 				<p>When I am not programming, I enjoy reading, gaming, building computers and hiking.</p>
 			</div>
@@ -103,7 +103,7 @@
 			<div class="project-card" style="margin-bottom: 1rem">
 				<div class="project-container">
 					<!--<img class="u-max-full-width" src="images/test.jpg">-->
-					<h5 class="no-bot-margin"><strong>squadFeeder</strong> |<a href="https://github.com/knlim95/squadFeeder"><i class="icon-code"></i></a></h5>
+					<h5 class="no-bot-margin"><strong>squadFeeder</strong> |<a href="https://github.com/knlim95/squadFeeder"><i class="icon-code"></i></a><a href="https://squadfeeder.herokuapp.com/"><i class="icon-link"></i></a></h5>
 					<p class="no-bot-margin">A web application that allows a group to get together and decide where the group should eat by calculating everyone's preferences and locations and aggregating results based on votes.</p>
 					<hr style="margin-bottom: 1rem; margin-top: 1rem">
 					<div class="project-tagbox">
