Changed UCSD employment name

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<p class="no-bot-margin">Webmaster</p>
 			<p class="no-bot-margin"><em>May 2017 - Present</em></p>
 			<br>
-			<h6 class="no-bot-margin"><strong>University of California, San Diego - Enrollment Management Helpdesk</strong></h6>
+			<h6 class="no-bot-margin"><strong>University of California, San Diego - Enrollment Management</strong></h6>
 			<p class="no-bot-margin">Desktop Support Technician</p>
 			<p class="no-bot-margin"><em>June 2015 - Present</em></p>
 		</div>
