Changed LinkedIn link

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 			</div>
 			<div class="five columns">
 				<h6 class="no-bot-margin">I'm Also Available At</h6>
-				<p class="no-bot-margin"><a href="https://www.linkedin.com/in/kevin-lim-93a055122" target="_blank"><i class="icon-linkedin-squared"></i>LinkedIn</a></p>
-				<p class="no-bot-margin"><a href="https://github.com/knlim95" target="_blank"><i class="icon-github-circled"></i>GitHub</a></p>
+				<p class="no-bot-margin"><a href="https://www.linkedin.com/in/knlim" target="_blank"><i class="icon-linkedin-squared"></i>LinkedIn</a></p>
+				<p><a href="https://github.com/knlim95" target="_blank"><i class="icon-github-circled"></i>GitHub</a></p>
 			</div>
 		</div>
 	</div>
