Added spacing to name in parallax

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Header -->
 <div id="header" class="parallax">
 	<div class="header-text">
-		<h1 class="no-bot-margin" style="color: white"><strong>KEVIN LIM</strong></h1>
+		<h1 class="no-bot-margin" style="color: white; letter-spacing: 3px"><strong>KEVIN LIM</strong></h1>
 		<p style="color: white; margin-bottom: 0.5rem"><em>student, developer and engineer</em></p>
 		<p style="color: white"><a href="#me">About Me</a> / <a href="#projects">Projects</a> / <a href="#contact">Contact Me</a></p>
 	</div>
@@ -56,7 +56,7 @@
 		<div class="row">
 			<div class="seven columns">
 				<p>I am currently studying Computer Engineering at the University of California, San Diego.</p>
-				<p>I am currently developing my skillset towards <strong>network engineering</strong> and <strong>systems administration</strong>, while expanding my skillset into different fields of <strong>software engineering</strong>.</p>
+				<p>I am currently developing my skillset towards <strong>systems administration</strong> and <strong>network engineering</strong>, while expanding my skillset into different fields of <strong>software engineering</strong>.</p>
 				<p>When I am not programming, I enjoy reading, gaming, building computers and hiking.</p>
 			</div>
 			<div class="five columns">
@@ -65,7 +65,7 @@
 				<h6 class="about-desc">DEGREE IN</h6>
 				<p style="text-align: right">Computer Engineering, B.S.</p>
 				<h6 class="about-desc">EXPERIENCE IN</h6>
-				<p style="text-align: right">Java, C, C++, Python<br>HTML, CSS, JavaScript<br>Ruby on Rails, Node.js<br>Active Directory, Microsoft Exchange</p>
+				<p style="text-align: right">Java, C, C++, C#, Python<br>HTML, CSS, JavaScript<br>Ruby on Rails, Node.js<br>Active Directory, Microsoft Exchange
 			</div>
 		</div>
 		<div class="row">
