Updated hyperlinks for clarity

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="header-text">
 		<h1 class="no-bot-margin" style="color: white; letter-spacing: 3px"><strong>KEVIN LIM</strong></h1>
 		<p style="color: white; margin-bottom: 0.5rem"><em>student, developer and engineer</em></p>
-		<p style="color: white"><a href="#me">About Me</a> / <a href="#projects">Projects</a> / <a href="#contact">Contact Me</a></p>
+		<p style="color: white"><a href="#me">About Me</a> / <a href="#projects">My Projects</a> / <a href="#contact">Contact Me</a></p>
 	</div>
 </div>
 	
