For validation purposes

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <!-- Footer -->
 <footer id="footer">
 	<div class="row">
-		<p style="text-align: right">&copy Kevin Lim</p>
+		<p style="text-align: right">&copy; Kevin Lim</p>
 	</div>
 </footer>
 	
