added pillo to projects

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 		</div>
 		<div class="row">
 			<div class="seven columns">
-				<p>I am currently studying Computer Engineering at the University of California, San Diego.</p>
-				<p>I am currently developing my skillset towards <strong>systems administration</strong> and <strong>network engineering</strong>, while expanding my skillset into different fields of <strong>software engineering</strong>.</p>
+				<p>I am currently studying Computer Engineering at the University of California, San Diego. I am to graduate on June 2018.</p>
+				<p>I am currently developing my skillset towards <strong>systems administration</strong>, while expanding my skillset into different fields of <strong>software engineering</strong>.</p>
 				<p>When I am not programming, I enjoy reading, gaming, building computers and hiking.</p>
 			</div>
 			<div class="five columns">
@@ -65,7 +65,7 @@
 				<h6 class="about-desc">DEGREE IN</h6>
 				<p style="text-align: right">Computer Engineering, B.S.</p>
 				<h6 class="about-desc">EXPERIENCE IN</h6>
-				<p style="text-align: right">Java, C, C++, C#, Python<br>HTML, CSS, JavaScript<br>Ruby on Rails, Node.js<br>Active Directory, Microsoft Exchange
+				<p style="text-align: right">Java, C, C++, C#, Python<br>HTML, CSS, JavaScript<br>Ruby on Rails, Node.js, React.js<br>Active Directory, Microsoft Exchange
 			</div>
 		</div>
 		<div class="row">
@@ -89,6 +89,23 @@
 			<div class="project-card">
 				<div class="project-container">
 					<!--<img class="u-max-full-width" src="images/test.jpg">-->
+					<h5 class="no-bot-margin"><strong>Pillo</strong> |<a href="https://github.com/knlim95/team_pillo"><i class="icon-code"></i></a></h5>
+					<p class="no-bot-margin">A concept React.js + Redux.js application designed for students to collaborate on projects efficiently, while instructors can create classes to manage guidelines, deadlines and grades for projects.</p>
+					<hr style="margin-bottom: 1rem; margin-top: 1rem">
+					<div class="project-tagbox">
+						<div class="project-tag">HTML5</div>
+						<div class="project-tag">CSS3</div>
+						<div class="project-tag">JavaScript</div>
+						<div class="project-tag">React.js</div>
+						<div class="project-tag">Redux.js</div>
+						<div class="project-tag">React Router</div>
+						<div class="project-tag">Reactstrap</div>
+					</div>
+				</div>
+			</div>
+			<div class="project-card">
+				<div class="project-container">
+					<!--<img class="u-max-full-width" src="images/test.jpg">-->
 					<h5 class="no-bot-margin"><strong>TritonBudget</strong> |<a href="https://github.com/knlim95/TritonBudget"><i class="icon-code"></i></a></h5>
 					<p class="no-bot-margin">An Android application designed for UCSD students to accurately budget their Dining Dollars and provides nutritional information for all the dining halls, so students can make informed decisions on food.</p>
 					<hr style="margin-bottom: 1rem; margin-top: 1rem">
@@ -104,7 +121,7 @@
 				<div class="project-container">
 					<!--<img class="u-max-full-width" src="images/test.jpg">-->
 					<h5 class="no-bot-margin"><strong>squadFeeder</strong> |<a href="https://github.com/knlim95/squadFeeder"><i class="icon-code"></i></a><a href="https://squadfeeder.herokuapp.com/"><i class="icon-link"></i></a></h5>
-					<p class="no-bot-margin">A web application that allows a group to get together and decide where the group should eat by calculating everyone's preferences and locations and aggregating results based on votes.</p>
+					<p class="no-bot-margin">A Node.js web application that allows a group to get together and decide where the group should eat by calculating everyone's preferences and locations and aggregating results based on votes.</p>
 					<hr style="margin-bottom: 1rem; margin-top: 1rem">
 					<div class="project-tagbox">
 						<div class="project-tag">HTML5</div>
