Updated info on current status

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div id="header" class="parallax">
 	<div class="header-text">
 		<h1 class="no-bot-margin" style="color: white; letter-spacing: 3px"><strong>KEVIN LIM</strong></h1>
-		<p style="color: white; margin-bottom: 0.5rem"><em>student, developer and engineer</em></p>
+		<p style="color: white; margin-bottom: 0.5rem"><em>developer and engineer</em></p>
 		<p style="color: white"><a href="#me">About Me</a> / <a href="#projects">My Projects</a> / <a href="#contact">Contact Me</a></p>
 	</div>
 </div>
@@ -55,8 +55,8 @@
 		</div>
 		<div class="row">
 			<div class="seven columns">
-				<p>I am currently studying Computer Engineering at the University of California, San Diego. I am to graduate on June 2018.</p>
-				<p>I am currently developing my skillset towards <strong>systems administration</strong>, while expanding my skillset into different fields of <strong>software engineering</strong>.</p>
+				<p>I am in process of developing my career as a <strong>DevOps Engineer</strong> in the <strong>San Francisco Bay Area</strong>.<p>
+				<p>I studied Computer Engineering at the University of California, San Diego. I graduted on June of 2018.</p>
 				<p>When I am not programming, I enjoy reading, gaming, building computers and hiking.</p>
 			</div>
 			<div class="five columns">
@@ -64,19 +64,21 @@
 				<p style="text-align: right">University of California, San Diego</p>
 				<h6 class="about-desc">DEGREE IN</h6>
 				<p style="text-align: right">Computer Engineering, B.S.</p>
-				<h6 class="about-desc">EXPERIENCE IN</h6>
-				<p style="text-align: right">Java, C, C++, C#, Python<br>HTML, CSS, JavaScript<br>Ruby on Rails, Node.js, React.js<br>Active Directory, Microsoft Exchange
 			</div>
 		</div>
 		<div class="row">
 			<h4>Experience</h4>
+			<h6 class="no-bot-margin"><strong>Bitglass, Inc.</strong></h6>
+			<p class="no-bot-margin">IT/Tools Engineer</p>
+			<p class="no-bot-margin"><em>July 2018 - Present</em></p>
+			<br>
 			<h6 class="no-bot-margin"><strong>Alpha Phi Omega - Rho Pi Chapter</strong></h6>
 			<p class="no-bot-margin">Webmaster</p>
 			<p class="no-bot-margin"><em>May 2017 - Present</em></p>
 			<br>
 			<h6 class="no-bot-margin"><strong>University of California, San Diego - Enrollment Management</strong></h6>
 			<p class="no-bot-margin">Desktop Support Technician</p>
-			<p class="no-bot-margin"><em>June 2015 - Present</em></p>
+			<p class="no-bot-margin"><em>June 2015 - June 2018</em></p>
 		</div>
 	</div>
 	<hr>
@@ -145,15 +147,9 @@
 			<h2>Need to Contact Me?</h2>
 		</div>
 		<div class="row">
-			<div class="seven columns">
-				<h6 class="no-bot-margin">Send Me an Email At</h6>
-				<p><a href="mailto:knlim95@gmail.com"><i class="icon-mail"></i>knlim95@gmail.com</a></p>
-			</div>
-			<div class="five columns">
-				<h6 class="no-bot-margin">I'm Also Available At</h6>
-				<p class="no-bot-margin"><a href="https://www.linkedin.com/in/knlim" target="_blank"><i class="icon-linkedin-squared"></i>LinkedIn</a></p>
-				<p><a href="https://github.com/knlim95" target="_blank"><i class="icon-github-circled"></i>GitHub</a></p>
-			</div>
+			<h6 class="no-bot-margin">I'm available at</h6>
+			<p class="no-bot-margin"><a href="https://www.linkedin.com/in/knlim" target="_blank"><i class="icon-linkedin-squared"></i>LinkedIn</a></p>
+			<p><a href="https://github.com/knlim95" target="_blank"><i class="icon-github-circled"></i>GitHub</a></p>
 		</div>
 	</div>
 
