Updated current position

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 				<p>When I am not programming, I enjoy reading, gaming, building computers and hiking.</p>
 			</div>
 			<div class="five columns">
+				<h6 class="about-desc">CURRENT POSITION</h6>
+				<p style="text-align: right">IT/Tools Engineer @ Bitglass, Inc.</p>
 				<h6 class="about-desc">STUDIED AT</h6>
 				<p style="text-align: right">University of California, San Diego</p>
 				<h6 class="about-desc">DEGREE IN</h6>
