--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="row">
 			<div class="seven columns">
 				<p>I am in process of developing my career as a <strong>DevOps Engineer</strong> in the <strong>San Francisco Bay Area</strong>.<p>
-				<p>I studied Computer Engineering at the University of California, San Diego. I graduted on June of 2018.</p>
+				<p>I studied <strong>Computer Engineering</strong> at the <strong>University of California, San Diego</strong>. I graduted on June of 2018.</p>
 				<p>When I am not programming, I enjoy reading, gaming, building computers and hiking.</p>
 			</div>
 			<div class="five columns">
