Fixed error in position

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<br>
 			<h6 class="no-bot-margin"><strong>Alpha Phi Omega - Rho Pi Chapter</strong></h6>
 			<p class="no-bot-margin">Webmaster</p>
-			<p class="no-bot-margin"><em>May 2017 - Present</em></p>
+			<p class="no-bot-margin"><em>May 2017 - May 2018</em></p>
 			<br>
 			<h6 class="no-bot-margin"><strong>University of California, San Diego - Enrollment Management</strong></h6>
 			<p class="no-bot-margin">Desktop Support Technician</p>
